# dg

./: .env  .env.compile  .env.example  .env.test  .gitignore  CRON_IMPLEMENTATION.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json  sqlx.sh  test_cron.rs  test_simple  test_simple.rs
.sqlx/: query-07488e2d3e37abf9b5e9110fe0146fdfeed7f51797eecb231e688d0586d83cd1.json  query-081391ddc02c92cba6bda2ec72e325bbe821339f6ebc7dec5e7f4637d72c0786.json  query-18767c70b8c4db8adf11b47716a074811f80f181929903af6b5c61c678965bb5.json  query-187c3b78bb46caff4ab220591855963f629a0d71ee902d11da3ace4f4a21ce69.json  query-1bd6dcb9f46608454f799b861d2c9c7f952473fb95688e996cf133e447b2294c.json  query-1cdfaede473d33eda8c1bd568192b1540721ae958770f281b2765888bfba62e3.json  query-23afa7b0e50374fba793245017c7d70fa9e6719bc9e1a1cfce872df15e0c15c4.json  query-24164cc18cb5fc083de94d50054e7227ff7acaea26c41cf0373ceecabc1a27e1.json  query-271faab1d8238a3da3b04f01c39858ed57b83e764a748e43ff22d246422ad728.json  query-2c4d4c4b45204c54baf7e06c51ce19279d778389f12cc63ccfc6f70128c6c89d.json  query-2c565022d70cc5dc28b6952fea5391b4cbb5bba3ed9d9549b9d7bc22f21c7ee0.json  query-2e9422111158f8e7c2f82939bd5669e5bae22e1211e8e780e2451b9c1e40c7f9.json  query-2ff789e32a4aabb0a12b25af78667b4dc02de283065291c7a778ab8d16e8a120.json  query-43aed70e6ab22c3110f14664e0fcb62cb0487089c2c6dcf35942d94ce7db7947.json  query-44a6131ca6049dd3919f8d153ed68c583ce409e32c3bbc487d7a6331a83f38d2.json  query-4e2e0a6e7efa07b5766bb7ebc0c0f6f3edbe5f427e2e54613468467096670b04.json  query-4ed6d7d037c425770d0dc5c312cf42e6dd26ab73538fac501f8484bede8bb852.json  query-57f1c4c8405672f01460527926b3c836d93600e60a1807eb62ed2e8cf089d3a1.json  query-5c190931457429c23cc7423ab7a45dc4a8f9b6f009171b3336d88d5432f040dd.json  query-5da5c6769fdb49f21a13e92404110545488d7f9596e1c2d8e8ec4af978490279.json  query-6676b424b547f8bafccaf44347760a6a0fcef95ffcdcccf2755a75a3010cf0d9.json  query-66efdd4887284ce95b675e67668b4dcb3665c45aa08aa0a8ae9a1115f444ec23.json  query-701889ad36ab778a85b3c31bbd5c409de690f7b34d253f722a54d742608c03b1.json  query-71234d8e913e01a02a870fec0fbc6b068a6cf7826d9dd11479b425779ba0615c.json  query-731ab2a761daf9a9687e59fcdead0f1b9e24d186bed406fb2f3a1442dce9fc6c.json  query-77b72d31c47c597fa5d30b653e2348b955dd3980b2d230b8b0f54b10d5ede8e3.json  query-7eee1d6bfcc8bc21d1db4e0d5a40a452d27cd386b4170c50a7643cc0da1131ee.json  query-801c8fec7bc015db341aa7f39446404258f72d90e1b97415330202955043ea61.json  (+22 more)
.zed/: debug.json
(+142 files in other folders)
